WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63464
[X11][WK2] plugins/plugin-javascript-access fails
https://bugs.webkit.org/show_bug.cgi?id=63464
Summary
[X11][WK2] plugins/plugin-javascript-access fails
Balazs Kelemen
Reported
2011-06-27 10:06:24 PDT
The test is failing because we don't determine the name of the plugin.
Attachments
Patch
(3.05 KB, patch)
2011-06-27 10:09 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-06-27 10:09:52 PDT
Created
attachment 98743
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2011-06-28 01:34:08 PDT
Comment on
attachment 98743
[details]
Patch LGTM
Balazs Kelemen
Comment 3
2011-06-28 02:12:24 PDT
Comment on
attachment 98743
[details]
Patch Clearing flags on attachment: 98743 Committed
r89908
: <
http://trac.webkit.org/changeset/89908
>
Balazs Kelemen
Comment 4
2011-06-28 02:12:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug