2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [X11][WK2] plugins/plugin-javascript-access fails
        https://bugs.webkit.org/show_bug.cgi?id=63464

        * platform/qt-wk2/Skipped:
2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [X11][WK2] plugins/plugin-javascript-access fails
        https://bugs.webkit.org/show_bug.cgi?id=63464

        * Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:
        (WebKit::NetscapePluginModule::getPluginInfo):
        Determine the name of the plugin.

Canonical link: https://commits.webkit.org/79194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89908 268f45cc-cd09-0410-ab3c-d52691b4dbfc